--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
     "compilerOptions": {
         "target": "ES2022",
         "outDir": "./dist/js/",
-        "noEmitOnError": true,
-
+        "noEmitOnError": true
     },
     "include": [
         "./src/**/*"
